[package]
name = "DEFAI-staking"
version = "0.1.0"
description = "DEFAI token staking program for debit card tier unlocking"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "defai_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
